--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ theme_settings:
   gravatar: # Email MD5 hash
 
   # Header and footer text
-  header_text: > <h1>OG Reviews</h1>
+  header_text: >
+      <h1>OG Reviews</h1>
   header_text_feature_image: assets/img/feature-imgs/triangular.jpeg
   footer_text: # > Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
 
