Simple author section

--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ description: "Reviews" # used by search engines
 
 # AUTHORS
 authors:
-  alex:
+  alexander_ursu:
     name: Alexander Ursu
-  gaffney:
+  gaffney_luk:
     name: Gaffney Luk
-  matthew:
+  matthew_yung:
     name: Matthew Yung
 
 
