--- a/_config.yml
+++ b/_config.yml
@@ -90,10 +90,10 @@ theme_settings:
   str_email: "Email"
   str_tweet: "Tweet"
   str_pin_it: "Pin it"
-  str_next_post: "Next post"
-  str_previous_post: "Previous post"
-  str_next_page: "Next"
-  str_previous_page: "Prev"
+  str_next_post: "Next Review"
+  str_previous_post: "Previous Review"
+  str_next_page: "Older Reviews"
+  str_previous_page: "Newer Reviews"
   str_continue_reading: "Continue reading"
   str_javascript_required_disqus: "Please enable JavaScript to view comments."
 
