fixed url in site config

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl: ""
-url: "https://Alxander64.github.io"
+url: "https://ogreviews.github.io"
 title: OG Reviews # site's title
 description: "Video Game and Movie Reviews" # used by search engines
 
